--- a/application/flicket/templates/flicket_post.html
+++ b/application/flicket/templates/flicket_post.html
@@ -21,6 +21,8 @@
             <div class="flicket-post-author-jobtitle">
                 {% if content.user.job_title %}
                 {{ content.user.job_title }}
+                {% else %}
+                &nbsp;
                 {% endif %}
             </div>
         </div>
