--- a/application/flicket/templates/flicket_post.html
+++ b/application/flicket/templates/flicket_post.html
@@ -82,7 +82,7 @@
             </div>
             <div class="btn btn-group-sm pull-right" style="padding-right: 0px;">
                 <a class="btn btn-default"
-                   href="{{ url_for('flicket_bp.ticket_view', ticket_id=ticket.id, page=page, post_id=post.id, ticket_rid=ticket.id) }}#reply">reply</a>
+                   href="{{ url_for('flicket_bp.ticket_view', ticket_id=ticket.id, page=page, post_rid=post_id, ticket_rid=ticket_rid) }}#reply">reply</a>
             </div>
         </div>
 
